--- a/README.Rmd
+++ b/README.Rmd
@@ -91,7 +91,7 @@ library(charisma)
 # Load example image
 img <- system.file(
   "extdata", 
-  "Anampses_caeruleopunctatus.png",
+  "Tangara_fastuosa_LACM60421.png",
   package = "charisma"
 )
 
@@ -165,7 +165,8 @@ knitr::include_graphics("man/figures/methods-flowchart.jpeg")
 
 ```{r, eval = FALSE}
 # Load previous analysis
-obj <- readRDS("path/to/charisma_object.RDS")
+obj <- system.file("extdata", "Tangara_fastuosa.RDS", package = "charisma")
+obj <- readRDS(obj)
 
 # Apply different threshold
 result2 <- charisma2(
