Edit CLUT Editor heading and wording

--- a/README.Rmd
+++ b/README.Rmd
@@ -196,7 +196,8 @@ launch_clut_editor(online = FALSE)
 
 ![CLUT Editor Interface](man/figures/clut-editor-interface.png)
 
-The CLUT Editor provides:
+
+#### The CLUT Editor provides:
 
 - Visual editing of HSV color space boundaries
 - Real-time coverage statistics (gaps and overlaps)
@@ -205,7 +206,8 @@ The CLUT Editor provides:
 
 ![CLUT Editor 3D Visualization](man/figures/clut-editor-3d.png)
 
-After designing your CLUT, validate and use it:
+
+After designing your custom CLUT, validate and use it:
 
 ```{r, eval = FALSE}
 # Create custom CLUT
